# Awareness-SDK

./: README.md
awareness-memory/: SKILL.md  awareness-spec.json
browser-extension/: .gitignore  CHANGELOG.md  README.md  manifest.json  package-lock.json  package.json  playwright.config.mjs
browser-extension/rules/: default-rulepack.json
browser-extension/scripts/: sign-rulepack.mjs
browser-extension/src/: content.js  sw.js
browser-extension/src/lib/: config.js  daemon-client.js  queue.js  rulepack.js
browser-extension/src/popup/: popup.css  popup.html  popup.js
browser-extension/test/: chaos-daemon.test.mjs  rulepack-match.test.mjs  rulepack-sign-interop.test.mjs  rulepack-signature.test.mjs
browser-extension/test/e2e/: bridge-token.spec.mjs  deepseek-capture.spec.mjs  helpers.mjs
browser-extension/test/fixtures/: deepseek.html
claudecode/: README.md
claudecode/.claude-plugin/: plugin.json
claudecode/skills/setup/: SKILL.md
openclaw/: CHANGELOG.md  README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw/examples/: openclaw-config.json
openclaw/src/: index.test.ts  index.ts
python/: CHANGELOG.md  README.md  pyproject.toml
setup-cli/: CHANGELOG.md  README.md  package.json
setup-cli/src/: cli.mjs  rules.mjs
typescript/: CHANGELOG.md  README.md  package.json
